--- a/package.json
+++ b/package.json
@@ -4,16 +4,21 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "devStart":"nodemon server.js",
+    "devStart": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dompurify": "^2.4.3",
     "ejs": "^3.1.8",
     "express": "^4.18.2",
-    "mongoose": "^6.9.0"
+    "jsdom": "^21.1.0",
+    "marked": "^4.2.12",
+    "method-override": "^3.0.0",
+    "mongoose": "^6.9.0",
+    "slugify": "^1.6.5"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
